--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ version = "0.1.0"
 bytes = "^0.4.3"
 futures = "^0.1.13"
 gio-sys = "^0.3.4"
+glib-sys = "^0.3.4"
 libc = "^0.2.22"
 tokio-io = "^0.1.1"
 
 [dependencies.futures-glib]
-path = "../futures-glib"
+path = "../futures-glib-rs"
 
 [replace]
 
