--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,9 @@ version = "0.1.0"
 [dependencies]
 bytes = "^0.4.3"
 futures = "^0.1.13"
-futures-glib = { git = "https://github.com/antoyo/futures-glib-rs" }
+#futures-glib = { git = "https://github.com/antoyo/futures-glib-rs" }
+futures-glib = { path = "../futures-glib-rs" }
 gio-sys = "^0.3.4"
 glib-sys = "^0.3.4"
 libc = "^0.2.22"
 tokio-io = "^0.1.1"
-
-[replace]
-
-[replace."futures:0.1.13"]
-branch = "spawn-trait"
-git = "https://github.com/alexcrichton/futures-rs"
