--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 [dependencies]
 bytes = "^0.4.3"
 futures = "^0.1.13"
-futures-glib = { git = "https://github.com/antoyo/futures-glib-rs" }
+futures-glib = "^0.1.0"
 gio-sys = "^0.3.4"
 glib-sys = "^0.3.4"
 libc = "^0.2.22"
