--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 authors = ["Antoni Boucher <bouanto@zoho.com>"]
+categories = ["asynchronous"]
+description = "Asynchronous unix domain socket running on the futures-glib main loop"
+license = "MIT"
 name = "fg-uds"
+repository = "https://github.com/antoyo/fg-uds-rs"
 version = "0.1.0"
 
 [dependencies]
